--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Justin Nacionales / Portfolio"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Justin Nacionales"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://jrishere.github.io # the base hostname & protocol for your site e.g. "https://jrishere.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "portfolio/jrishere.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  name             : "Justin Nacionales"
+  pronouns         : # example: "he/him"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Houston, Texas"
+  employer         : "University of Houston"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "justinnacionales21@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
