--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ locale                   : "en-US"
 title                    : "Justin Nacionales / Portfolio"
 title_separator          : "-"
 name                     : &name "Justin Nacionales"
-description              : &description "personal description"
-url                      : https://jrishere.github.io # the base hostname & protocol for your site e.g. "https://jrishere.github.io"
+description              : &description "Computer Science major at UH (Class of 2025) with a passion for software development, cybersecurity, and problem-solving."
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "portfolio/jrishere.github.io"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -23,14 +23,14 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Justin Nacionales"
-  pronouns         : # example: "he/him"  
-  bio              : "Short biography for the left-hand sidebar"
+  pronouns         : # example: "she/her"  
+  bio              : "Computer Science major at UH (Class of 2025) with a passion for software development, cybersecurity, and problem-solving."
   location         : "Houston, Texas"
   employer         : "University of Houston"
   uri              : # URL
   email            : "justinnacionales21@gmail.com" 
 
-  # Academic websites
+  # Links to Academic Websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://www.linkedin.com/in/justinnacionales/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -73,6 +73,10 @@ author:
   xing             : # Username
   youtube          : # Username
   zhihu            : # Username
+
+  # Links to Education and Resume
+  university_link  : "https://www.cs.uh.edu"
+  resume           : "assets/resume.pdf"  # Resume in PDF format
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
@@ -144,11 +148,11 @@ social:
   links: # An array of links to social media profiles
 
 
-# Analytics
+# Analytics - Google Analytics Tracking ID
 analytics:
-  provider               :  "false" # false (default), "google", "google-universal", "google-analytics-4", "custom"
+  provider               :  "google"
   google:
-    tracking_id          :
+    tracking_id          : "G-CYH3Q22W7N" # Your Google Analytics Measurement ID
 
 
 # Reading Files
@@ -339,14 +343,6 @@ tag_archive:
 #   layouts:
 #     category: archive-taxonomy
 #     tag: archive-taxonomy
-#   permalinks:
-#     category: /categories/:name/
-#     tag: /tags/:name/
-
-
-# HTML Compression
-# - http://jch.penibelst.de/
-compress_html:
-  clippings: all
-  ignore:
-    envs: development
+#     category_fallback: false
+#     tag_fallback: false
+#   add_permalink: true
