--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Justin Nacionales / Portfolio"
 title_separator          : "-"
 name                     : &name "Justin Nacionales"
 description              : &description "Computer Science major at UH (Class of 2025) with a passion for software development, cybersecurity, and problem-solving."
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://jrishere.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -44,7 +44,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "jrishere"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
